# ChangeLog for dev-ruby/formtastic
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Apr 2015; Hans de Graaff <graaff@gentoo.org> -formtastic-2.2.1.ebuild:
  Cleanup.

  16 Sep 2014; Hans de Graaff <graaff@gentoo.org> formtastic-3.0.0.ebuild:
  Avoid silly deprecation message that cannot be avoided by making code
  changes.

*formtastic-3.0.0 (16 Sep 2014)

  16 Sep 2014; Hans de Graaff <graaff@gentoo.org> +formtastic-3.0.0.ebuild:
  Version bump.

*formtastic-2.3.1 (11 Sep 2014)

  11 Sep 2014; Hans de Graaff <graaff@gentoo.org> +formtastic-2.3.1.ebuild:
  Version bump.

  02 Jul 2014; Hans de Graaff <graaff@gentoo.org> formtastic-2.2.1.ebuild:
  Add ruby20, ruby21.

*formtastic-2.2.1 (12 Feb 2013)

  12 Feb 2013; Hans de Graaff <graaff@gentoo.org> +formtastic-2.2.1.ebuild,
  +metadata.xml:
  Initial import.
