@@ -1,2 +1,3 @@
 DIST formtastic-2.3.1.gem 125440 SHA256 5496efac5943f8bff33c989cd24ed03f129070594b165ee143330da4bb6ca266 SHA512 64d74f4e678de8ffcc3154cfb3833a95bae7a96d37f350c5697363aababdf6445ee36089f43f199f3c688183a331faa969ddbcc5e748588d129ad67bde385cc3 WHIRLPOOL e8a2f0e39543b0eba0f6719805acae9b5dccbac1c5db8daa05fd171c57b4829acba9e13d590a40cf133385c67635dbd21e864affac225abf1f3fbe7d7e2af265
 DIST formtastic-3.0.0.gem 115712 SHA256 3a6a7bd777503117a07e0c050fbf24a9beef93eb7660fd28791739f9f20f95bb SHA512 ac81b5e936f1b27ecebd314c645984075cb0704db1e052fcef12fde9ec9905cd8f6369490d016b76f88776effb0912059a5cc2253b85f377a6252965c394beae WHIRLPOOL 96141c58ef054faf67dd64ce63dc6ba0a1b94d4e861c98bae3d35e43d94bf66cc26aebd6f5b5e55452b2327be4579bfc41135ea634e22733e98a8984a26fd824
+DIST formtastic-3.1.3.gem 122880 SHA256 858bd07f389f67d2cee10da3a0c8c4fbfbf822e53f87d8e62469bde343ff4e63 SHA512 24501fec7d719beb0b796d869b54f80c784becf41ea3eacd69bd909944443d381b92563629e5d73c4d97059f01614eb08e98bf9c90f918fbdda97cf2d4e6ead3 WHIRLPOOL c8b29a9c2d312984ee55fb3ecad6c2c30b902a7e30118758f5fba1bce4537b6b82f4cd124c4af174514a1cb25a8cacca2902de46160e342ef35813761de9e3ca
