@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*formtastic-3.1.3 (22 May 2015)
+
+  22 May 2015; Hans de Graaff <graaff@gentoo.org> +formtastic-3.1.3.ebuild:
+  Version bump.
+
   17 Apr 2015; Hans de Graaff <graaff@gentoo.org> -formtastic-2.2.1.ebuild:
   Cleanup.
 
